--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-08-23 14:40+0300\n"
+"POT-Creation-Date: 2024-08-27 10:22+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,11 +17,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
 #: .\templates\account\email\base_message.txt:1
 #, python-format
 msgid "Приветствуем Вас с %(site_name)s!"
-msgstr "Wellcome to %(site_name)s!"
+msgstr ""
 
 #: .\templates\account\email\base_message.txt:5
 #, python-format
@@ -41,33 +40,33 @@ msgid ""
 "Хорошего дня!\n"
 msgstr ""
 
-#: .\templates\flatpages\default.html:30
+#: .\templates\flatpages\default.html:39
 msgid "Новостной портал"
 msgstr "News Portal"
 
-#: .\templates\flatpages\default.html:44
+#: .\templates\flatpages\default.html:53 .\templates\flatpages\default.html:67
 msgid "Выбор"
-msgstr "Set"
+msgstr "Choice"
 
-#: .\templates\flatpages\default.html:50
+#: .\templates\flatpages\default.html:61
 msgid "Часовой пояс"
-msgstr "Time Zone"
+msgstr "Time zone"
 
-#: .\templates\flatpages\default.html:65
+#: .\templates\flatpages\default.html:82
 msgid "Главная"
-msgstr "Home"
+msgstr "Main"
 
-#: .\templates\flatpages\default.html:66
+#: .\templates\flatpages\default.html:83
 msgid "Поиск"
 msgstr "Search"
 
-#: .\templates\flatpages\default.html:68
+#: .\templates\flatpages\default.html:85
 msgid "Информация"
 msgstr "Info"
 
 #: .\templates\news_list.html:15 .\templates\news_list.html:24
 msgid "Список новостей"
-msgstr "News List"
+msgstr "News list"
 
 #: .\templates\news_list.html:20
 msgid "Количество новостей :"
@@ -83,7 +82,7 @@ msgstr "Add news"
 
 #: .\templates\news_list.html:27
 msgid "Добавить статью"
-msgstr "Add post"
+msgstr "Add article"
 
 #: .\templates\news_list.html:31
 msgid "Название"
@@ -99,7 +98,7 @@ msgstr "Description"
 
 #: .\templates\news_list.html:37
 msgid "Действия"
-msgstr "Action"
+msgstr "Actions"
 
 #: .\templates\news_list.html:43
 #, python-format
@@ -125,112 +124,91 @@ msgid "Удалить"
 msgstr "Delete"
 
 #: .\templates\post_delete.html:5
-#, fuzzy
-#| msgid "Содержание поста"
 msgid "Удаление поста"
-msgstr "Post Delete"
+msgstr "Deleting post"
 
 #: .\templates\post_delete.html:9
-#, fuzzy
-#| msgid "Удалить"
 msgid "Удаляем"
 msgstr "Delete"
 
 #: .\templates\post_delete.html:9
-#, fuzzy, python-format
-#| msgid " %(name)s "
+#, python-format
 msgid " \"%(name_post)s\"? "
-msgstr " %(name)s ?"
+msgstr " \"%(name_post)s\"? "
 
 #: .\templates\post_detail.html:10
 msgid "Новость :"
-msgstr "News :"
+msgstr "News"
 
 #: .\templates\post_detail.html:10 .\templates\post_search.html:32
-#, fuzzy, python-format
-#| msgid " %(name)s "
+#, python-format
 msgid " %(name_post)s "
-msgstr " %(name)s "
+msgstr " %(name_post)s "
 
 #: .\templates\post_detail.html:15
 msgid "Содержание поста"
 msgstr "Post content"
 
 #: .\templates\post_detail.html:15
-#, fuzzy, python-format
-#| msgid " %(name)s "
+#, python-format
 msgid " \"%(name_post)s\" "
-msgstr " %(name)s "
+msgstr " \"%(name_post)s\ "
 
 #: .\templates\post_detail.html:16
-#, fuzzy, python-format
-#| msgid " %(text)s "
+#, python-format
 msgid " \"%(text_post)s\" "
-msgstr " %(text)s "
+msgstr " \"%(text_post)s\" "
 
 #: .\templates\post_detail.html:20
-#, fuzzy, python-format
-#| msgid " %(date)s "
+#, python-format
 msgid " \"%(date_post)s\" "
-msgstr " %(date)s "
+msgstr " \"%(date_post)s\" "
 
 #: .\templates\post_edit.html:5
 msgid "Пост"
 msgstr "Post"
 
 #: .\templates\post_edit.html:10
-#, fuzzy
-#| msgid "Изменить"
 msgid "Сохранить"
 msgstr "Save"
 
 #: .\templates\post_search.html:8 .\templates\post_search.html:12
-#, fuzzy
-#| msgid "Поиск"
 msgid "Поиск постов"
 msgstr "Search for posts"
 
 #: .\templates\post_search.html:20
 msgid "Найти"
-msgstr "Search"
+msgstr "Find"
 
 #: .\templates\post_search.html:26
-#, fuzzy
-#| msgid "Содержание поста"
 msgid "Название поста"
-msgstr "Post content"
+msgstr "Post title"
 
 #: .\templates\post_search.html:27
-#, fuzzy
-#| msgid "Содержание поста"
 msgid "Дата поста"
-msgstr "Date post"
+msgstr "Post date"
 
 #: .\templates\post_search.html:28
 msgid "Текст"
 msgstr "Text"
 
 #: .\templates\post_search.html:33
-#, fuzzy, python-format
-#| msgid " %(date)s "
+#, python-format
 msgid " %(date_post)s "
-msgstr " %(date)s "
+msgstr " %(date_post)s "
 
 #: .\templates\post_search.html:34
-#, fuzzy, python-format
-#| msgid " %(text)s "
-msgid "%(text_post)s "
-msgstr " %(text)s "
+#, python-format
+msgid " %(text_post)s "
+msgstr " %(text_post)s "
 
 #: .\templates\post_search.html:39
-#, fuzzy
-#| msgid "Новостной портал"
 msgid "Новостей нет!"
-msgstr "No News!"
+msgstr "No news"
 
 #: .\templates\subscriptions.html:5
 msgid "Подписка"
-msgstr "Subscriptions"
+msgstr "Subscription"
 
 #: .\templates\subscriptions.html:18 .\templates\subscriptions.html:21
 msgid "Отписаться"
